# safety_hat_2

./: AGENTS.md  COMMENTING_GUIDELINES.md  README.md  build.gradle.kts  settings.gradle.kts
libncnn/src/main/cpp/: CMakeLists.txt  libncnn.cpp  power_jni.cpp  yolo.cpp  yolo.h
libncnn/src/main/cpp/callsmoke/: libcall.cpp  libsmoke.cpp  yolocall.cpp  yolocall.h  yolosmoke.cpp  yolosmoke.h
libncnn/src/main/cpp/hiv_z_vest/: lib_hivz_vest.cpp  yolo_hivz_vest.cpp  yolo_hivz_vest.h
libncnn/src/main/cpp/libs/android-freetype-master/: FTL.txt  Makefile  README-original.md  README.md
libncnn/src/main/cpp/libs/android-freetype-master/Android/jni/: Android.mk
libncnn/src/main/cpp/libs/android-freetype-master/include/freetype/: ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftcache.h  ftcid.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  fttypes.h  ftwinfnt.h  ftxf86.h  t1tables.h  tttables.h  tttags.h  ttunpat.h
libncnn/src/main/cpp/libs/android-freetype-master/include/freetype/config/: ftconfig.h
libncnn/src/main/cpp/libs/android-freetype-master/include/freetype/internal/: autohint.h  ftcalc.h  ftdebug.h  ftdriver.h  ftgloadr.h  ftmemory.h  ftobjs.h  ftrfork.h  ftstream.h  ftvalid.h  pcftypes.h  psaux.h  pshints.h  sfnt.h  (+2 more)
libncnn/src/main/cpp/libs/android-freetype-master/src/autofit/: afmodule.h  aftypes.h
libncnn/src/main/cpp/libs/android-freetype-master/src/base/: ftbase.h
libncnn/src/main/cpp/libs/android-freetype-master/src/cff/: cffgload.h  cffload.h  cffparse.h  cfftypes.h
libncnn/src/main/cpp/libs/android-freetype-master/src/sfnt/: ttcmap.h
libncnn/src/main/cpp/libs/android-freetype-master/src/truetype/: ttinterp.h  ttobjs.h
libncnn/src/main/cpp/power/: clipper.cpp  device_status_rec.cpp  high_voltage_cabinet_rec.cpp  low_voltage_cabinet_rec.cpp  ppocr.cpp  ppocr_cls.cpp  ppocr_det.cpp  ppocr_rec.cpp  stop_send_card_rec.cpp  yolov8_detect.cpp  yolov8_pose.cpp
libncnn/src/main/cpp/power/include/: clipper.h  device_status_rec.h  high_voltage_cabinet_rec.h  low_voltage_cabinet_rec.h  ppocr.h  ppocr_cls.h  ppocr_det.h  ppocr_rec.h  stop_send_card_rec.h  yolov8_detect.h  yolov8_pose.h
libncnn/src/main/cpp/safe/: libsafe.cpp  yolov8.cpp  yolov8.h
libncnn/src/main/cpp/uniform/: lib_uniform.cpp  yolo_uniform.cpp  yolo_uniform.h
(+104 files in other folders)
